database_connection_sources = files(
	'configuration-manager.c',
	'configuration-reader.c',
	'database-connection.c',
	'database-connection-utils.c',
	'rule-validation.c',
	'gawake-types.c',
	'rules-manager.c',
	'rules-reader.c',
	'debugger.c',
	'get-time.c',
	'time-converter.c'
)

database_connection_deps = [
	dependency('sqlite3'),
	dependency('gio-2.0')
]